fix Stiftungslink für Github Pages

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a href="#navtohome" class="nav-link">Home</a>
           </li>
           <li class="nav-item h3">
-            <a href="/Stiftung/index.html" class="nav-link">Stiftung</a>
+            <a href="./Stiftung/index.html" class="nav-link">Stiftung</a>
           </li>
           <li class="nav-item h3">
             <a href="#navtoprogram" class="nav-link">Fest 2024</a>
@@ -110,7 +110,7 @@
                 "www.bv-unterneukirchen.de/Stiftung". Mit dem Link kemts direkt do hi</p>
             </div>
             <div class="col-lg-4 welcome-note-right-right">
-              <a href="/Stiftung/index.html">Mehra dazua</a>
+              <a href="./Stiftung/index.html">Mehra dazua</a>
             </div>
           </div>
         </div>
