--- a/Stiftung/index.html
+++ b/Stiftung/index.html
@@ -105,7 +105,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!--start-header-->
 	<div class="header">
 		<div class="container">
-<a href="/../index.html"> <img  src="images/zurueckBVU.jpg",  width= 20%, class="img-responsive"></a>
+<a href="./../index.html"> <img  src="images/zurueckBVU.jpg",  width= 20%, class="img-responsive"></a>
 		</div>
 	</div>	
 	<!-- script-for-menu -->
