fix second back link stiftung

--- a/Stiftung/index.html
+++ b/Stiftung/index.html
@@ -445,7 +445,7 @@ Mit der Stiftung sollen in der Satzung verankerte Prinzipen und urspr&uuml;nglic
   	<!--start-header-->
 	<div class="header">
 		<div class="container">
-<a href="/../index.html"> <img  src="images/zurueckBVU.jpg",  width= 20%, class="img-responsive"></a>
+<a href="./../index.html"> <img  src="images/zurueckBVU.jpg",  width= 20%, class="img-responsive"></a>
 		</div>
 	</div>	
 	<!-- script-for-menu -->
