--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description"
-    content="Wir feiern unser 150 jähriges Bestehen mit einem Festwochenende vom 06. bis 10. September 2023.">
-  <meta property="og:image" content="img/150Jahre-300x200.png" />
+  <meta property="og:image" content="https://kainze.github.io/Website-BVU/android-chrome-512x512.png"/>  
+  <meta property="og:title" content="Burschenverein Unterneukirchen"/>  
+  <meta property="og:description" content="Da BVU deaf eich recht herzlich auf seina Seitn begriassn."/>  
 
   <!-- <link href="node_modules/bootstrap/dist/css/bootstrap.min.css"rel="stylesheet"/> -->
   <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css" />
@@ -84,6 +84,13 @@
           <a href="#navtoprogram" class="btn bg-light-grey text-dark btn-lg mt-1">
             Infos zum Gaufest 2024
           </a>
+
+          <p> <br> </p>
+
+          <div class="form-check form-switch">
+            <input class="form-check-input" type="checkbox" id="flexSwitchCheckBackground" onclick="setBackgroundimage()">
+            <label class="form-check-label" for="flexSwitchCheckMaps">Alternative Hintergrund </label>
+          </div>
 
         </div>
         <div class="col justify-content-right">
@@ -266,8 +273,8 @@
                 <h3 class="text-white">Kabarett</h3>
                 <h5 class="text-white">mit Sepp Hager und Freunde</h5>
                 <h5 class="text-dark">Karten ab 01.12 erhältlich bei <a class="text-dark"
-                  href="https://iq-elektro-hager.de/" style="text-decoration: none;">Elektro Hager</a> und
-                  <a class="text-dark" href="https://www.kerstins-blumenwerkstatt.de/" style="text-decoration: none;">Kerstin's Blumenwerkstatt</a>
+                  href="https://iq-elektro-hager.de/" target="_blank" style="text-decoration: none;">Elektro Hager</a> und
+                  <a class="text-dark" href="https://www.kerstins-blumenwerkstatt.de/" target="_blank" style="text-decoration: none;">Kerstin's Blumenwerkstatt</a>
               </h5>
               </div>
               <div class="col-lg-6 text-lg-start text-center">
@@ -285,9 +292,9 @@
                 <h2>Donnerstag</h2>
                 <h3 class="text-white">BVU Brass Night</h3>
                 <h5 class="text-dark">Karten ab 01.12 erhältlich bei <a class="text-dark"
-                    href="https://iq-elektro-hager.de/" style="text-decoration: none;">Elektro Hager</a>, 
-                    <a class="text-dark" href="https://www.kerstins-blumenwerkstatt.de/" style="text-decoration: none;">Kerstin's Blumenwerkstatt</a> & 
-                    <a class="text-white" href="https://www.reservix.de"  style="text-decoration: none;" >www.reservix.de</a>
+                    href="https://iq-elektro-hager.de/" target="_blank" style="text-decoration: none;">Elektro Hager</a>, 
+                    <a class="text-dark" href="https://www.kerstins-blumenwerkstatt.de/" target="_blank" style="text-decoration: none;">Kerstin's Blumenwerkstatt</a> & 
+                    <a class="text-white" href="https://www.reservix.de" target="_blank" style="text-decoration: none;" >www.reservix.de</a>
                 </h5>
                 <h5 class="text-dark">Preis: 21€ zzg. VVG </h5>
                 <h5 class="text-dark">Abendkasse: 23€</h5>
@@ -429,7 +436,7 @@
       <div class="row">
         <div class="col-lg-12 text-primary text-center">
           <div class="row">
-            <p class="text-white"> auf der alten Website wäre hier noch de "aktuelle" Vorstandschaft?</p>
+            <p class="text-white"> auf der alten Website wäre hier noch de mehr oder weniger "aktuelle" Vorstandschaft?</p>
             <div class="col-lg-12">
               <h1> <span class="text-dark"> Vorstandschaft</span></h1>
             </div>
@@ -438,6 +445,30 @@
               <p>Stefan Mitterer, 2. Vorstand: <a class="text-warning" href="mailto:Wieser95@web.de" style="text-decoration: none;">Wieser95@web.de</a></p>
             </div>
           </div>
+        </div>
+
+        <div class="col-lg-12 text-primary text-center">
+          <div class="row">
+            <div class="col-lg-12">
+              <h1> <span class="text-dark"> Social Media</span></h1>
+            </div>
+            <div class="col-lg-12 text-white">
+              <p> Da Burschenverein ist jetzt auch über WhatsApp erreichbar.  <a href="https://wa.me/message/SQWQBJGWGYMGL1" target="_blank" class="btn bg-light-grey text-dark mt-1">
+                <i class="bi bi-whatsapp"></i> Hier geht's zu unserm WhatsApp
+              </a></p>
+            </div>
+
+            <div class="col-lg-12 text-white">
+              <a href="https://www.facebook.com/BVUnterneukirchen/" target="_blank" class="btn bg-light-grey text-dark mt-1">
+                <i class="bi bi-facebook"></i> Hier geht's zu unserm Facebook
+              </a>
+              <a href="https://www.instagram.com/burschenverein_unterneukirchen/" target="_blank" class="btn bg-light-grey text-dark mt-1">
+                <i class="bi bi-instagram"></i> Hier geht's zu unserm Instagram
+              </a>
+              <a href="https://whatsapp.com/channel/0029VaDKkzb6mYPDxpGy8e2w" target="_blank" class="btn bg-light-grey text-dark mt-1">
+                <i class="bi bi-whatsapp"></i> Hier geht's zu unserm Whatsapp Kanal
+              </a>
+            </div>
         </div>
         <!-- Google Maps 
         <div class="col-lg-6" id="MapsCard" style="min-height: 40vh; margin-top: 4vh;">
