--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <nav class="navbar navbar-expand-lg bg-primary navbar-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="img/logo_BVU.png" style="max-height: 7vb;" lass="d-inline-block align-top"
+        <img src="img/logo_BVU.png" style="max-width: 80vw; max-height: 7vb;" lass="d-inline-block align-top"
           alt="Burschengaufest 2024 Unterneukirchen">
         <!-- Burschenverein Unterneukirchen -->
       </a>
@@ -479,7 +479,7 @@
             <div class="col-lg-8 welcome-note-right-left">
               <h3>Informationen zur Stiftung Burschenverein Unterneukirchen</h3>
               <p>Die Stiftung Burschenverein Unterneukirchen hod a eigene Internet-Seitn
-                "www.bv-unterneukirchen.de/Stiftung". Mit dem Link kemts direkt do hi</p>
+                "www.bv-unterneukirchen.de/Stiftung". Mit dem Link kemts direkt do hi.</p>
             </div>
             <div class="col-lg-4 welcome-note-right-right">
               <a href="./Stiftung/index.html">Mehra dazua</a>
