--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta property="og:image" content="https://kainze.github.io/Website-BVU/android-chrome-512x512.png" />
+  <meta property="og:image" content="https://www.bv-unterneukirchen.de/android-chrome-512x512.png"/>
   <meta property="og:title" content="Burschenverein Unterneukirchen" />
   <meta property="og:description" content="Da BVU deaf eich recht herzlich auf seina Seitn begriassn." />
 
@@ -31,7 +31,7 @@
   <nav class="navbar navbar-expand-lg bg-primary navbar-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="img/logo_BVU.png" style="max-width: 80vw; max-height: 7vb;" lass="d-inline-block align-top"
+        <img src="img/logo_BVU.png" style="max-height: 7vb;" lass="d-inline-block align-top"
           alt="Burschengaufest 2024 Unterneukirchen">
         <!-- Burschenverein Unterneukirchen -->
       </a>
@@ -74,7 +74,7 @@
       <div class="d-sm-flex align-items-center">
         <div class="col">
         </div>
-        <div class="col-lg-5 p-5 text-dark text-end bg-light-grey home">
+        <div class="col-lg-5 p-5 text-dark bg-light-grey home">
           <h1 class="text-primary"> Griaß God </h1>
           <hr class="bg-primary">
 
@@ -102,7 +102,7 @@
 
           <p class="h6 my-4">
             No koa Weihnachtsgeschenk? Ab 1.12. gibt's Karten für <span class="text-primary">Sepp Hager und
-              Freunde</span> und da <span class="text-primary">BVU Brass Night</span> beim
+              Freunde</span> und de <span class="text-primary">BVU Brass Night</span> beim
             <a class="text-dark" href="https://iq-elektro-hager.de/" target="_blank"
               style="text-decoration: none;">Elektro Hager</a>
             und
@@ -119,11 +119,13 @@
             class="btn bg-dark text-white mt-1" target="_blank">
             Karten BVU Brass Night
           </a>
+          <!-- 
           <div class="form-check form-switch text-start">
             <input class="form-check-input" type="checkbox" id="flexSwitchCheckBackground"
               onclick="setBackgroundimage()">
             <label class="form-check-label" for="flexSwitchCheckMaps">Alternative Hintergrund </label>
           </div>
+          -->
 
         </div>
         <div class="col justify-content-right d-none">
@@ -149,7 +151,7 @@
           </div>
         </div>
       </div>
-      <div id="carouselIndicator" class="carousel carousel-dark slide" data-interval="8000" data-bs-ride="carousel">
+      <div id="carouselIndicator" class="carousel carousel-dark slide" data-interval="10000" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselIndicator" data-bs-slide-to="0" class="active"
             aria-current="true" aria-label="Übersicht"></button>
@@ -531,9 +533,9 @@
           </div>
           <div class="row">
             <div class="col-lg-12 text-white">
-              <p>Daniel Schmuck, 1. Vorstand: <a class="text-warning" href="mailto:DanielSchmuck@kabelmail.de"
+              <p>Daniel Schmuck, 1. Vorstand: <br> <a class="text-warning" href="mailto:DanielSchmuck@kabelmail.de"
                   style="text-decoration: none;">DanielSchmuck@kabelmail.de</a></p>
-              <p>Stefan Mitterer, 2. Vorstand: <a class="text-warning" href="mailto:Wieser95@web.de"
+              <p>Stefan Mitterer, 2. Vorstand: <br> <a class="text-warning" href="mailto:Wieser95@web.de"
                   style="text-decoration: none;">Wieser95@web.de</a></p>
               <br>
             </div>
@@ -590,7 +592,7 @@
   <footer class="p-5 bg-primary text-white text-center position-relative">
     <div class="container">
       <p class="lead">Copyright &copy; 2023 Burschenverein Unterneukirchen e.V. </p>
-      <p>Design by Matthias Kainzmaier </p>
+      <p>Website by Matthias Kainzmaier </p>
 
       <a href="#navtodatenschutzerklaerung" class="nav-link" data-bs-toggle="modal"
         data-bs-target="#datenschutzerklaerungModal">Datenschutzerklärung</a>
