--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <nav class="navbar navbar-expand-lg bg-primary navbar-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="img/logo_BVU.png" style="max-height: 7vb;" lass="d-inline-block align-top"
+        <img src="img/logo_BVU.png" style="max-height: 7vb;" class="d-inline-block align-top"
           alt="Burschengaufest 2024 Unterneukirchen">
         <!-- Burschenverein Unterneukirchen -->
       </a>
@@ -129,7 +129,7 @@
 
         </div>
         <div class="col justify-content-right d-none">
-          <img src="img/Wintersonnwendfeuer.jpg" alt="Gauburschenfest 2023" class="img-fluid">
+          <img src="img/Wintersonnwendfeuer.jpg" alt="Gauburschenfest 2023" loading="lazy" class="img-fluid">
         </div>
       </div>
     </div>
@@ -203,7 +203,7 @@
 
               </div>
               <div class="col-lg-6 text-lg-start text-center" style="padding-bottom: 5px;">
-                <img src="img/FlyerRückseite.jpg" alt="Übersicht" class="img-fluid"
+                <img src="img/FlyerRückseite.jpg" loading="lazy" alt="Übersicht" class="img-fluid"
                   style="max-height: 60vh; margin-bottom: 5vh;" />
               </div>
             </div>
@@ -222,7 +222,7 @@
                 <br>
               </div>
               <div class="col-lg-6 text-lg-start text-center d-none"> <!-- d-none raus-->
-                <img src="img/Flyerfolgt.jpg" alt="Bieranstich" class="img-fluid"
+                <img src="img/Flyerfolgt.jpg" loading="lazy" alt="Bieranstich" class="img-fluid"
                   style="max-height: 60vh; max-width: 100%; margin-bottom: 5vh;" />
               </div>
             </div>
@@ -240,7 +240,7 @@
                 <br>
               </div>
               <div class="col-lg-6 text-lg-start text-center d-none"> <!-- d-none raus-->
-                <img src="img/Flyerfolgt.jpg" alt="Wein- und Weißbierfest" class="img-fluid"
+                <img src="img/Flyerfolgt.jpg" loading="lazy" alt="Wein- und Weißbierfest" class="img-fluid"
                   style="max-height: 60vh; max-width: 100%; margin-bottom: 5vh;" />
               </div>
             </div>
@@ -259,7 +259,7 @@
                 <br>
               </div>
               <div class="col-lg-6 text-lg-start text-center d-none"> <!-- d-none raus-->
-                <img src="img/Flyerfolgt.jpg" alt="Burschenparty" class="img-fluid"
+                <img src="img/Flyerfolgt.jpg" loading="lazy" alt="Burschenparty" class="img-fluid"
                   style="max-height: 60vh; max-width: 100%; margin-bottom: 5vh;" />
               </div>
             </div>
@@ -278,7 +278,7 @@
                 <br>
               </div>
               <div class="col-lg-6 text-lg-start text-center d-none"> <!-- d-none raus-->
-                <img src="img/Flyerfolgt.jpg" alt="Rasenmäherbulldog-Rennen" class="img-fluid"
+                <img src="img/Flyerfolgt.jpg" loading="lazy" alt="Rasenmäherbulldog-Rennen" class="img-fluid"
                   style="max-height: 60vh; max-width: 100%; margin-bottom: 5vh;" />
               </div>
             </div>
@@ -300,7 +300,7 @@
                 </h5>
               </div>
               <div class="col-lg-6 text-lg-start text-center">
-                <img src="img/KabarettInsta.png" alt="Kabarett" class="img-fluid"
+                <img src="img/KabarettInsta.png" loading="lazy" alt="Kabarett" class="img-fluid"
                   style="max-height: 60vh; max-width: 100%; margin-bottom: 5vh;" />
               </div>
             </div>
@@ -333,7 +333,7 @@
                 <p> <br></p>
               </div>
               <div class="col-lg-6 text-lg-start text-center">
-                <img src="img/BrassNightInsta.png" alt="BVU Brass Night Flyer" class="img-fluid"
+                <img src="img/BrassNightInsta.png" loading="lazy" alt="BVU Brass Night Flyer" class="img-fluid"
                   style="max-height: 60vh; max-width: 100%; margin-bottom: 5vh;" />
               </div>
               <div class="text-center d-block d-lg-none">
@@ -359,7 +359,7 @@
                 <br>
               </div>
               <div class="col-lg-6 text-lg-start text-center d-none"> <!-- d-none raus-->
-                <img src="img/Flyerfolgt.jpg" alt="Almrauschparty" class="img-fluid"
+                <img src="img/Flyerfolgt.jpg" loading="lazy" alt="Almrauschparty" class="img-fluid"
                   style="max-height: 60vh; max-width: 100%; margin-bottom: 5vh;" />
               </div>
             </div>
@@ -378,7 +378,7 @@
                 <br>
               </div>
               <div class="col-lg-6 text-lg-start text-center d-none"> <!-- d-none raus-->
-                <img src="img/Flyerfolgt.jpg" alt="Festabend" class="img-fluid"
+                <img src="img/Flyerfolgt.jpg" loading="lazy" alt="Festabend" class="img-fluid"
                   style="max-height: 60vh; max-width: 100%; margin-bottom: 5vh;" />
               </div>
             </div>
@@ -404,7 +404,7 @@
                 <p> <br></p> -->
               </div>
               <div class="col-lg-6 text-lg-start text-center d-none"> <!-- d-none raus-->
-                <img src="img/Flyerfolgt.jpg" alt="Festsonntag" class="img-fluid"
+                <img src="img/Flyerfolgt.jpg" loading="lazy" alt="Festsonntag" class="img-fluid"
                   style="max-height: 60vh; max-width: 100%; margin-bottom: 5vh;" />
               </div>
               <!-- Zugaufstellung Button 
