--- a/qrcode/index.html
+++ b/qrcode/index.html
@@ -93,9 +93,9 @@
   </section>
 
   <!-- <script src="node_modules/jquery/dist/jquery.min.js"></script> -->
-  <script src="node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="dest/js/script.js?v=1.1"></script>
+  <script src="../node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
+  <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="../dest/js/script.js?v=1.1"></script>-->
 </body>
 
 </html>
