--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
           <hr class="bg-primary">
 
           <p class="h6 my-4">
-            No koa Weihnachtsgeschenk? Ab 1.12. gibt's Karten für <span class="text-primary">Sepp Hager und
-              Freunde</span> und de <span class="text-primary">BVU Brass Night</span> beim
+            Auf der Suche nach an Geschenk? Karten für <span class="text-primary">Sepp Hager und
+              Freunde</span> und de <span class="text-primary">BVU Brass Night</span> gibt's beim
             <a class="text-dark" href="https://iq-elektro-hager.de/" target="_blank"
               style="text-decoration: none;">Elektro Hager</a>
             und
@@ -230,7 +230,7 @@
           <!-- Wein- und Weißbierfest -->
           <div class="carousel-item">
             <div class="row">
-              <div class="col-lg-6 text-secondary text-end px-5"><!-- " d-none d-lg-block" -->
+              <div class="col-lg-6 text-secondary text-end px-5 d-none d-lg-block">
                 <h2>26.07.2024</h2>
                 <h2>Freitag</h2>
                 <h3 class="text-white">Wein- und Weißbierfest</h3>
@@ -239,8 +239,8 @@
                 <br>
                 <br>
               </div>
-              <div class="col-lg-6 text-lg-start text-center d-none"> <!-- d-none raus-->
-                <img src="img/Flyerfolgt.jpg" loading="lazy" alt="Wein- und Weißbierfest" class="img-fluid"
+              <div class="col-lg-6 text-lg-start text-center">
+                <img src="img/WundWBInsta.png" loading="lazy" alt="Wein- und Weißbierfest" class="img-fluid border border-white"
                   style="max-height: 60vh; max-width: 100%; margin-bottom: 5vh;" />
               </div>
             </div>
@@ -249,7 +249,7 @@
           <!-- Burschenparty -->
           <div class="carousel-item">
             <div class="row">
-              <div class="col-lg-6 text-secondary text-end px-5"><!-- " d-none d-lg-block" -->
+              <div class="col-lg-6 text-secondary text-end px-5 d-none d-lg-block">
                 <h2>27.07.2024</h2>
                 <h2>Samstag</h2>
                 <h3 class="text-white">Burschenparty</h3>
@@ -258,8 +258,8 @@
                 <br>
                 <br>
               </div>
-              <div class="col-lg-6 text-lg-start text-center d-none"> <!-- d-none raus-->
-                <img src="img/Flyerfolgt.jpg" loading="lazy" alt="Burschenparty" class="img-fluid"
+              <div class="col-lg-6 text-lg-start text-center"> 
+                <img src="img/BurschenpartyInsta.png" loading="lazy" alt="Burschenparty" class="img-fluid"
                   style="max-height: 60vh; max-width: 100%; margin-bottom: 5vh;" />
               </div>
             </div>
