added new Flyer

--- a/index.html
+++ b/index.html
@@ -211,18 +211,17 @@
           <!-- Bieranstich -->
           <div class="carousel-item">
             <div class="row">
-              <div class="col-lg-6 text-secondary text-end px-5"> <!-- " d-none d-lg-block" -->
+              <div class="col-lg-6 text-secondary text-end px-5 d-none d-lg-block">
                 <h2>25.07.2024</h2>
                 <h2>Donnerstag</h2>
                 <h3 class="text-white">Bieranstich mit <br> Kapelle Josef Menzl</h3>
-                <h5 class="text-dark">Beginn 19.30 Uhr</h5>
-                <h5 class="text-dark">zuvor Totengedenken</h5>
+                <h5 class="text-dark">Beginn 19.00 Uhr</h5>
                 <br>
                 <br>
                 <br>
               </div>
-              <div class="col-lg-6 text-lg-start text-center d-none"> <!-- d-none raus-->
-                <img src="img/Flyerfolgt.jpg" loading="lazy" alt="Bieranstich" class="img-fluid"
+              <div class="col-lg-6 text-lg-start text-center">
+                <img src="img/BieranstichInsta.png" loading="lazy" alt="Bieranstich" class="img-fluid"
                   style="max-height: 60vh; max-width: 100%; margin-bottom: 5vh;" />
               </div>
             </div>
@@ -349,7 +348,7 @@
           <!-- Almrauschparty -->
           <div class="carousel-item">
             <div class="row">
-              <div class="col-lg-6 text-secondary text-end px-5"> <!-- " d-none d-lg-block" -->
+              <div class="col-lg-6 text-secondary text-end px-5 d-none d-lg-block">
                 <h2>02.08.2024</h2>
                 <h2>Freitag</h2>
                 <h3 class="text-white">Almrauschparty</h3>
@@ -358,8 +357,8 @@
                 <br>
                 <br>
               </div>
-              <div class="col-lg-6 text-lg-start text-center d-none"> <!-- d-none raus-->
-                <img src="img/Flyerfolgt.jpg" loading="lazy" alt="Almrauschparty" class="img-fluid"
+              <div class="col-lg-6 text-lg-start text-center">
+                <img src="img/AlmrauschInsta.png" loading="lazy" alt="Almrauschparty" class="img-fluid"
                   style="max-height: 60vh; max-width: 100%; margin-bottom: 5vh;" />
               </div>
             </div>
@@ -368,17 +367,18 @@
           <!-- Festabend -->
           <div class="carousel-item">
             <div class="row">
-              <div class="col-lg-6 text-secondary text-end px-5"> <!-- " d-none d-lg-block" -->
+              <div class="col-lg-6 text-secondary text-end px-5 d-none d-lg-block">
                 <h2>03.08.2024</h2>
                 <h2>Samstag</h2>
                 <h3 class="text-white">Festabend</h3>
                 <h5 class="text-dark">mit Dirndl- und Burschenversteigerung</h5>
-                <br>
+                <h5 class="text-dark">zuvor Totengedenken</h5>
+                <br>                
                 <br>
                 <br>
               </div>
-              <div class="col-lg-6 text-lg-start text-center d-none"> <!-- d-none raus-->
-                <img src="img/Flyerfolgt.jpg" loading="lazy" alt="Festabend" class="img-fluid"
+              <div class="col-lg-6 text-lg-start text-center">
+                <img src="img/FestsonntagInsta.png" loading="lazy" alt="Festabend" class="img-fluid"
                   style="max-height: 60vh; max-width: 100%; margin-bottom: 5vh;" />
               </div>
             </div>
