added last Flyers

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
           <!-- Rasenmäherbulldog-Rennen -->
           <div class="carousel-item">
             <div class="row">
-              <div class="col-lg-6 text-secondary text-end px-5"> <!-- " d-none d-lg-block" -->
+              <div class="col-lg-6 text-secondary text-end px-5 d-none d-lg-block">
                 <h2>28.07.2024</h2>
                 <h2>Sonntag</h2>
                 <h3 class="text-white">Rasenmäherbulldog-Rennen</h3>
@@ -276,8 +276,8 @@
                 <br>
                 <br>
               </div>
-              <div class="col-lg-6 text-lg-start text-center d-none"> <!-- d-none raus-->
-                <img src="img/Flyerfolgt.jpg" loading="lazy" alt="Rasenmäherbulldog-Rennen" class="img-fluid"
+              <div class="col-lg-6 text-lg-start text-center">
+                <img src="img/RasenmaeherInsta.png" loading="lazy" alt="Rasenmäherbulldog-Rennen" class="img-fluid"
                   style="max-height: 60vh; max-width: 100%; margin-bottom: 5vh;" />
               </div>
             </div>
@@ -378,7 +378,7 @@
                 <br>
               </div>
               <div class="col-lg-6 text-lg-start text-center">
-                <img src="img/FestsonntagInsta.png" loading="lazy" alt="Festabend" class="img-fluid"
+                <img src="img/FestabendInsta.png" loading="lazy" alt="Festabend" class="img-fluid"
                   style="max-height: 60vh; max-width: 100%; margin-bottom: 5vh;" />
               </div>
             </div>
@@ -386,7 +386,7 @@
           <!-- Festsonntag -->
           <div class="carousel-item">
             <div class="row">
-              <div class="col-lg-6 text-secondary text-end px-5"><!-- " d-none d-lg-block" -->
+              <div class="col-lg-6 text-secondary text-end px-5 d-none d-lg-block">
                 <h2>04.08.2024</h2>
                 <h2>Sonntag</h2>
                 <h3 class="text-white">Festsonntag</h3>
@@ -403,8 +403,8 @@
                 </a>
                 <p> <br></p> -->
               </div>
-              <div class="col-lg-6 text-lg-start text-center d-none"> <!-- d-none raus-->
-                <img src="img/Flyerfolgt.jpg" loading="lazy" alt="Festsonntag" class="img-fluid"
+              <div class="col-lg-6 text-lg-start text-center">
+                  <img src="img/FestsonntagInsta.png" loading="lazy" alt="Wein- und Weißbierfest" class="img-fluid border border-white"
                   style="max-height: 60vh; max-width: 100%; margin-bottom: 5vh;" />
               </div>
               <!-- Zugaufstellung Button 
