added some Beschreibungen

--- a/index.html
+++ b/index.html
@@ -214,8 +214,19 @@
               <div class="col-lg-6 text-secondary text-end px-5 d-none d-lg-block">
                 <h2>25.07.2024</h2>
                 <h2>Donnerstag</h2>
-                <h3 class="text-white">Bieranstich mit <br> Kapelle Josef Menzl</h3>
-                <h5 class="text-dark">Beginn 19.00 Uhr</h5>
+                <h3 class="text-white">Bieranstich</h3>
+                <h5 class="text-dark">mit Kapelle Josef Menzl</h5>
+                <h5 class="text-white"> Losgeht's am 25.7. mit dem Bieranstich🍺🥳 </h5>
+                <h5 class="text-white"> Für die perfekte Bierzeltstimmung sorgt die Kapelle Josef Menzl!🎺🥁🪈 </h5>
+                <h5 class="text-white"> Zudem freuen wir uns, die regionalen Firmen beim 'Tag der Betriebe' begrüßen zu dürfen!🫱🏼‍🫲🏼 </h5>
+                <br>
+                <h6 class="text-white"> 🕖 Beginn 19:00 Uhr </h6>
+                <h6 class="text-white"> 🎟️ Eintritt Frei! </h6>
+                <h6 class="text-white"> 🍺 Weißbierkarussell </h6>
+                <h6 class="text-white"> 🥃 Barbetrieb </h6>
+                <h6 class="text-white"> ✅ Tischreservierungen möglich unter: </h6>
+                <h6 class="text-white"> WhatsApp: <a href="https://wa.me/message/SQWQBJGWGYMGL1" target="_blank" class="h6"> +49 15679 338247 </a> 📲  </h6>
+                <h6 class="text-white"> E-Mail: <a href="mailto:bvunterneukirchen@gmx.de" target="_blank" class="h6"> bvunterneukirchen@gmx.de </a> 📧 </h6>
                 <br>
                 <br>
                 <br>
@@ -234,6 +245,18 @@
                 <h2>Freitag</h2>
                 <h3 class="text-white">Wein- und Weißbierfest</h3>
                 <h5 class="text-dark">mit Postamt-Trio</h5>
+                <h5 class="text-white"> Das legendäre Unterneukirchner Wein & Weißbierfest derf a beim Burschengaufest 2024 ned fehlen.🍷🍻</h5>
+                <h5 class="text-white"> Wie gewohnt sorgt as Postamt Trio für beste Bierzeltstimmung!🥳</h5>
+                <br>
+                <h6 class="text-white"> 🕖 Beginn 19:00 Uhr </h6>
+                <h6 class="text-white"> 🍻 Verschiedene Weißbiere aus der Region </h6>
+                <h6 class="text-white"> 🍷 Ausgewählte Weine </h6>
+                <h6 class="text-white"> 🍺 Weißbierkarussell </h6>
+                <h6 class="text-white"> 🥃 Barbetrieb </h6>
+                <h6 class="text-white"> 🎟️ Eintritt Frei! </h6>
+                <h6 class="text-white"> ✅ Tischreservierungen möglich unter: </h6>
+                <h6 class="text-white"> WhatsApp: <a href="https://wa.me/message/SQWQBJGWGYMGL1" target="_blank" class="h6"> +49 15679 338247 </a> 📲  </h6>
+                <h6 class="text-white"> E-Mail: <a href="mailto:bvunterneukirchen@gmx.de" target="_blank" class="h6"> bvunterneukirchen@gmx.de </a> 📧 </h6>
                 <br>
                 <br>
                 <br>
@@ -253,6 +276,14 @@
                 <h2>Samstag</h2>
                 <h3 class="text-white">Burschenparty</h3>
                 <h5 class="text-dark">mit DJ Joe Lennox</h5>
+                <h5 class="text-white"> Unsere erste der 2 großen Partynächte am Gauburschenfest 2024 ist unsere legendäre Burschenparty🥳 </h5>
+                <h5 class="text-white"> Eingeheizt wird euch vom Dj Joe Lennox und für ausreichend kühle Getränke sorgen wir an unserer spektakulären Gaufest-Bar… Ihr dürft gespannt sein😉🥃🍺 </h5>
+
+                <h6 class="text-white"> Natürlich gibts auch wieder ein Busspezial mit vergünstigten Eintritt und 1x Schnaps/Person
+
+                <h6 class="text-white"> Anmeldung unter: </h6>
+                <h6 class="text-white"> WhatsApp: <a href="https://wa.me/message/SQWQBJGWGYMGL1" target="_blank" class="h6"> +49 15679 338247 </a> 📲  </h6>
+                <h6 class="text-white"> E-Mail: <a href="mailto:bvunterneukirchen@gmx.de" target="_blank" class="h6"> bvunterneukirchen@gmx.de </a> 📧 </h6>
                 <br>
                 <br>
                 <br>
@@ -272,13 +303,31 @@
                 <h2>Sonntag</h2>
                 <h3 class="text-white">Rasenmäherbulldog-Rennen</h3>
                 <h5 class="text-dark">und Minibike-Rennen</h5>
-                <br>
-                <br>
-                <br>
+                <p> <br></p>
+                <a href="https://rbf-maderlehen.de/rennanmeldung"
+                  target="_blank" class="btn bg-secondary text-light-grey btn-outline-secondary btn-lg">
+                  Anmeldung
+                </a>
+                <a href="mailto:rbfmaderlehen@gmail.com"
+                  target="_blank" class="btn bg-secondary text-light-grey btn-outline-secondary btn-lg">
+                  Kontakt
+                </a>
+                <p> <br></p>
               </div>
               <div class="col-lg-6 text-lg-start text-center">
                 <img src="img/RasenmaeherInsta.png" loading="lazy" alt="Rasenmäherbulldog-Rennen" class="img-fluid"
                   style="max-height: 60vh; max-width: 100%; margin-bottom: 5vh;" />
+              </div>
+              <div class="text-center d-block d-lg-none">
+                <a href="https://rbf-maderlehen.de/rennanmeldung"
+                  target="_blank" class="btn bg-secondary text-light-grey btn-outline-secondary btn-lg">
+                  Anmeldung
+                </a>
+                <a href="mailto:rbfmaderlehen@gmail.com"
+                  target="_blank" class="btn bg-secondary text-light-grey btn-outline-secondary btn-lg">
+                  Kontakt
+                </a>
+                <p> <br></p>
               </div>
             </div>
           </div>
@@ -321,7 +370,6 @@
                     href="https://shop.copilot.events/suedpol/events/fe95dc89-95a8-46f0-b053-d9c95e06eace"
                     target="_blank" style="text-decoration: none;">hier</a> auch online
                 </h5>
-                <h5 class="text-dark">Preis Early Bird: 21€</h5>
                 <h5 class="text-dark">Preis Kartenvorverkauf: 26€</h5>
                 <h5 class="text-dark">Einlass 17.30Uhr - Beginn 18.00Uhr</h5>
                 <p> <br></p>
