--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 <h5 class="text-white"> Unsere erste der 2 großen Partynächte am Gauburschenfest 2024 ist unsere legendäre Burschenparty🥳 </h5>
                 <h5 class="text-white"> Eingeheizt wird euch vom Dj Joe Lennox und für ausreichend kühle Getränke sorgen wir an unserer spektakulären Gaufest-Bar… Ihr dürft gespannt sein😉🥃🍺 </h5>
 
-                <h6 class="text-white"> Natürlich gibts auch wieder ein Busspezial mit vergünstigten Eintritt und 1x Schnaps/Person
+                <h6 class="text-white"> Natürlich gibts auch wieder ein Busspezial <br> mit vergünstigten Eintritt und 1x Schnaps/Person
 
                 <h6 class="text-white"> Anmeldung unter: </h6>
                 <h6 class="text-white"> WhatsApp: <a href="https://wa.me/message/SQWQBJGWGYMGL1" target="_blank" class="h6"> +49 15679 338247 </a> 📲  </h6>
@@ -303,15 +303,20 @@
                 <h2>Sonntag</h2>
                 <h3 class="text-white">Rasenmäherbulldog-Rennen</h3>
                 <h5 class="text-dark">und Minibike-Rennen</h5>
+
+                <h5 class="text-white"> Am 4. Tag unserer Festwoche findet das Rasenmäherbulldog-Rennen mit Minibikerennen statt. </h5>
                 <p> <br></p>
+                <h5 class="text-white"> Um 11:00 Uhr startet das Minibike-Rennen.🏍️ </h5>
+                <h5 class="text-white"> Ab 13:00 Uhr treten die Teilnehmer in den beiden Klassen "Tuning" und "Original" mit ihren Rasenmähern in einem spannenden Rennen sowie bei einem Geschicklichkeitsparcour gegeneinander an. </h5>
+                <p> <br></p>
+                
+                <h6 class="text-white"> Die Regeln und Teilnahmebedingungen findet ihr hier 🛜 </h6>
                 <a href="https://rbf-maderlehen.de/rennanmeldung"
                   target="_blank" class="btn bg-secondary text-light-grey btn-outline-secondary btn-lg">
-                  Anmeldung
+                  Regeln und Teilnahmebedingungen
                 </a>
-                <a href="mailto:rbfmaderlehen@gmail.com"
-                  target="_blank" class="btn bg-secondary text-light-grey btn-outline-secondary btn-lg">
-                  Kontakt
-                </a>
+                <p> <br></p>
+                <h6 class="text-white"> Anmeldungen an <a href="mailto:rbfmaderlehen@gmail.com" target="_blank" class="text-white" > rbfmaderlehen@gmail.com</a> 📧 </h6>
                 <p> <br></p>
               </div>
               <div class="col-lg-6 text-lg-start text-center">
@@ -339,13 +344,25 @@
                 <h2>30.07.2024</h2>
                 <h2>Dienstag</h2>
                 <h3 class="text-white">Kabarett</h3>
-                <h5 class="text-white">mit Sepp Hager und Freunde</h5>
-                <h5 class="text-dark">Karten ab 01.12 erhältlich bei <a class="text-dark"
-                    href="https://iq-elektro-hager.de/" target="_blank" style="text-decoration: none;">Elektro Hager</a>
+                <h5 class="text-white"> mit Sepp Hager und Freunde</h5>
+                <h5 class="text-dark"> Mein Lieber Herr Gesangsverein🎭</h5>
+                <p> <br></p>
+                <h5 class="text-white"> Gemeinsam mit Sepp Hager & Freunde laden wir euch herzlich zu einem kurzweiligen Kabarett-Abend ein!</h5>
+                <p> <br></p>
+                <h5 class="text-white"> Der Kartenvorverkauf läuft bereits auf Hochtouren!🎟️</h5>
+                <h5 class="text-white">
+                  Die Karten sind erhältlich bei 
+                  <a class="text-dark" href="https://iq-elektro-hager.de/" target="_blank" style="text-decoration: none;">Elektro Hager</a>
                   und
-                  <a class="text-dark" href="https://www.kerstins-blumenwerkstatt.de/" target="_blank"
-                    style="text-decoration: none;">Kerstin's Blumenwerkstatt</a>
-                </h5>
+                  <a class="text-dark" href="https://www.kerstins-blumenwerkstatt.de/" target="_blank" style="text-decoration: none;">Kerstin's Blumenwerkstatt</a> 
+                  in Unterneukirchen.
+                </h5>  
+                <p> <br></p>
+                <h6 class="text-white"> 🕕 Einlass: 18:00 Uhr </h6>
+                <h6 class="text-white"> 🕗 Beginn: 20:00 Uhr </h6>
+                <h6 class="text-white"> 🍽️ Für's leibliche Wohl ist gesorgt! </h6>
+                <h6 class="text-white"> 🍺 Anschließend Weißbierkarussel </h6>
+                <p> <br></p>
               </div>
               <div class="col-lg-6 text-lg-start text-center">
                 <img src="img/KabarettInsta.png" loading="lazy" alt="Kabarett" class="img-fluid"
@@ -361,17 +378,22 @@
                 <h2>01.08.2024</h2>
                 <h2>Donnerstag</h2>
                 <h3 class="text-white">BVU Brass Night</h3>
-                <h5 class="text-dark">Karten ab 01.12 erhältlich bei <a class="text-dark"
-                    href="https://iq-elektro-hager.de/" target="_blank" style="text-decoration: none;">Elektro
-                    Hager</a>,
-                  <a class="text-dark" href="https://www.kerstins-blumenwerkstatt.de/" target="_blank"
-                    style="text-decoration: none;">Kerstin's Blumenwerkstatt</a> und
-                  <a class="text-white"
-                    href="https://shop.copilot.events/suedpol/events/fe95dc89-95a8-46f0-b053-d9c95e06eace"
-                    target="_blank" style="text-decoration: none;">hier</a> auch online
-                </h5>
-                <h5 class="text-dark">Preis Kartenvorverkauf: 26€</h5>
-                <h5 class="text-dark">Einlass 17.30Uhr - Beginn 18.00Uhr</h5>
+                <h5 class="text-white"> Weiter gehds bei unserem Gaufest <br> mit unserer BVU-BRASS-NIGHT🎉</h5>
+                <h5 class="text-white"> Wir ham a wahnsinns Line-Up <br> bei dem für jeden wos dabei is:</h5>
+                <p> <br></p>
+                <h5 class="text-white"> Schladl Musi</h5>
+                <h5 class="text-white"> Lenze und de Buam</h5>
+                <h5 class="text-white"> Desperate Brasswives</h5>
+                <h5 class="text-white"> DeSchoWieda</h5>
+                <p> <br></p>
+                <h6 class="text-white"> 🕠 Einlass ab 17:30 Uhr </h6>
+                <h6 class="text-white"> 🕕 Beginn 18:00 Uhr </h6>
+                <h6 class="text-white"> 🍺 Weißbierkarussell </h6>
+                <h6 class="text-white"> 🥃 Barbetrieb </h6>
+                <h6 class="text-white"> 🎟️ Karten erhältlich bei <a class="text-dark" href="https://iq-elektro-hager.de/" target="_blank" style="text-decoration: none;">Elektro Hager</a> und
+                  <a class="text-dark" href="https://www.kerstins-blumenwerkstatt.de/" target="_blank" style="text-decoration: none;">Kerstin's Blumenwerkstatt</a> in Unterneukirchen oder 
+                  <a class="text-white" href="https://shop.copilot.events/suedpol/events/fe95dc89-95a8-46f0-b053-d9c95e06eace" target="_blank" style="text-decoration: none;">hier</a> auch Online 😉
+                </h6>
                 <p> <br></p>
                 <a href="https://shop.copilot.events/suedpol/events/fe95dc89-95a8-46f0-b053-d9c95e06eace"
                   target="_blank" class="btn bg-secondary text-light-grey btn-outline-secondary btn-lg">
@@ -399,10 +421,23 @@
               <div class="col-lg-6 text-secondary text-end px-5 d-none d-lg-block">
                 <h2>02.08.2024</h2>
                 <h2>Freitag</h2>
-                <h3 class="text-white">Almrauschparty</h3>
+                <h3 class="text-white">Almrauschparty 🥳🪩</h3>
                 <h5 class="text-dark">mit Almklausi und DJ 2B vom Spinnradl</h5>
-                <br>
-                <br>
+                <p> <br></p>
+                <h5 class="text-white"> Die 2. Partynacht beim Burschengaufest 2024🎉🍻🥃</h5>
+                <p> <br></p>
+                <h6 class="text-white"> 🔊 Malle- und Après Ski-Star ALMKLAUSI</h6>
+                <h6 class="text-white"> 🎧 DJ 2B vom Spinnradl Spitzingsee</h6>
+                <h6 class="text-white"> 🍺 Weißbierkarussell</h6>
+                <h6 class="text-white"> 🥃 XXL-Gaufestbar</h6>
+                <h6 class="text-white"> 🕘 Einlass 21:00 Uhr</h6>
+                <h6 class="text-white"> 🚫 Ab 18 Jahren</h6>
+                <p> <br></p>
+                <h6 class="text-white"> 🚌 Verbilligter Eintritt & Begrüßungs-Schnaps bei Busanmeldung: </h6>
+                <h6 class="text-white"> <a href="mailto:bvunterneukirchen@gmx.de" target="_blank" class="text-white" > bvunterneukirchen@gmx.de</a> 📧 </h6>
+                <h6 class="text-white"> oder </h6>
+                <h6 class="text-white"> <a href="https://wa.me/message/SQWQBJGWGYMGL1" target="_blank" class="text-white"> WhatsApp +49 15679 338247</a> 📲 </h6>
+                <p> <br></p>
                 <br>
               </div>
               <div class="col-lg-6 text-lg-start text-center">
@@ -420,10 +455,13 @@
                 <h2>Samstag</h2>
                 <h3 class="text-white">Festabend</h3>
                 <h5 class="text-dark">mit Dirndl- und Burschenversteigerung</h5>
-                <h5 class="text-dark">zuvor Totengedenken</h5>
-                <br>                
-                <br>
-                <br>
+                <p> <br></p>
+                <h5 class="text-white"> Unser Festabend startet mit dem Totengedenken am Kriegerdenkmal Unterneukirchen um 19:00 Uhr🕖 </h5>
+                <h5 class="text-white"> Anschließend ziehen wir mit den Vereinen zum Festzelt.🎺🍻 </h5>
+                <h5 class="text-white"> Musikalisch umrahmt von der Blaskapelle Unterneukirchen dürft Ihr gespannt sein, wer oder was bei der Dirndl- und Burschenversteigerung alles unter den Hammer kommt😉👨🏻‍⚖ </h5>
+                <p> <br></p>
+                <h6 class="text-white"> Für das leibliche Wohl ist durch das Team vom Bierzeltbetrieb Simml gesorgt und wie gewohnt dreht sich natürlich auch das Weißbierkarussell!🍺 </h6>
+                <br>        
               </div>
               <div class="col-lg-6 text-lg-start text-center">
                 <img src="img/FestabendInsta.png" loading="lazy" alt="Festabend" class="img-fluid"
@@ -437,11 +475,13 @@
               <div class="col-lg-6 text-secondary text-end px-5 d-none d-lg-block">
                 <h2>04.08.2024</h2>
                 <h2>Sonntag</h2>
-                <h3 class="text-white">Festsonntag</h3>
+                <h3 class="text-white">Festsonntag 🍺🎺</h3>
                 <h5 class="text-dark">mit Festgottesdienst</h5>
-                <h5 class="text-dark">Bierzeltbetrieb mit de Obinger und da "Bast scho" Muse</h5>
-                <br>
-                <br>
+                <p> <br></p>
+                <h5 class="text-white"> Wir feiern 110 Jahre Katholischer Burschenverein Unterneukirchen sowie as 57. Gaufest der Burschen- und Arbeitervereine ausn Chiemgau und Rupertiwinkel🥳 </h5>
+                <h5 class="text-white"> Zudem wird unser neue Fahne geweiht!🎉 </h5>
+                <p> <br></p>
+                <h5 class="text-white"> Für die perfekte Bierzeltstimmung sorgen de Obinger und späda an da Bar spuid "Bast scho" für a mega Partystimmung auf!🎺🪗🥁🥳 </h5>
                 <br>
                 <!-- Zugaufstellung button?
                 <p> <br></p>
