--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             <a href="#navtoprogram" class="nav-link">Fest 2024</a>
           </li>
           <li class="nav-item h3">
+            <a href="#navtoanfahrt" class="nav-link">Anfahrt</a>
+          </li>
+          <li class="nav-item h3">
             <a class="nav-link" href="#navtocontact">Kontakt</a>
           </li>
           <li class="nav-item h3">
@@ -90,7 +93,7 @@
           <hr class="bg-primary">
 
           <p class="h6 my-4 text-primary">
-            Wir derfan nächstes Jahr zu unserem 110-jährigen Bestehen as Burschengaufest 2024 ausrichten.
+            Wir derfan dieses Jahr zu unserem 110-jährigen Bestehen as Burschengaufest 2024 ausrichten.
           </p>
           <a href="#navtoprogram" class="btn bg-primary text-white mt-1">
             Infos zum Gaufest 2024
@@ -263,7 +266,7 @@
                 <h6 class="text-white"> 🍻 Verschiedene Weißbiere aus der Region </h6>
                 <h6 class="text-white"> 🍷 Ausgewählte Weine </h6>
                 <h6 class="text-white"> 🍺 Weißbierkarussell </h6>
-                <h6 class="text-white"> 🥃 Barbetrieb </h6> 
+                <h6 class="text-white"> 🥃 Barbetrieb </h6>
                 <h6 class="text-white"> ✅ Tischreservierungen möglich unter: </h6>
                 <h6 class="text-white"> WhatsApp: <a href="https://wa.me/message/SQWQBJGWGYMGL1" target="_blank"
                     class="h6"> +49 15679 338247 </a> 📲 </h6>
@@ -462,7 +465,7 @@
                 <h3 class="text-white">Almrauschparty 🥳🪩</h3>
                 <h5 class="text-dark">mit Almklausi und DJ 2B vom Spinnradl</h5>
                 <p> <br></p>
-                <h5 class="text-white"> Die 2. Partynacht beim Burschengaufest 2024🎉🍻🥃</h5>
+                <h5 class="text-white"> Die zweite Partynacht beim Burschengaufest 2024🎉🍻🥃</h5>
                 <p> <br></p>
                 <h6 class="text-white"> 🔊 Malle- und Après Ski-Star ALMKLAUSI</h6>
                 <h6 class="text-white"> 🎧 DJ 2B vom Spinnradl Spitzingsee</h6>
@@ -613,6 +616,49 @@
     </div>
   </section>
 
+  <!-- Anfahrt -->
+  <section id="Anfahrt">
+    <div class="container containersection bg-primary">
+      <span id="navtoanfahrt" class="navto"></span>
+      <div class="row text-center text-success">
+        <div class="col pt-5">
+          <h1> <span class="text-light-grey">Anfahrt </span> <span id="AnfahrtDescription"> zum Gaufest 2024 </span>
+          </h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <hr class="bg-white" style="height: 3px;">
+        </div>
+      </div>
+
+      <div class="row text-center text-success pb-5">
+        <div class="col-lg-2 d-none d-lg-block"></div>
+        <div class="col-12 col-lg-8 text-white">
+          <!-- Google Maps  -->
+          <div class="col-12" id="MapsCard" style="width: 100%; height: 90%;">
+            <div class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" id="flexSwitchCheckMaps" onclick="LoadMapsCard()">
+              <label class="form-check-label" for="flexSwitchCheckMaps">Ich bin damit einverstanden, dass mir
+                Inhalte von
+                Google Maps angezeigt werden. Es können dabei personenbezogene Daten an den Anbieter des Inhalts und
+                Drittdienste übermittelt werden. Mehr dazu in der <a href="#navtodatenschutzerklaerung"
+                  data-bs-toggle="modal" data-bs-target="#datenschutzerklaerungModal"
+                  class="text-dark">Datenschutzerklärung</a></label>
+            </div>
+          </div>
+          <div class="col-12">
+            <a href="https://maps.app.goo.gl/9jVeRGfcZwTnWzjP6" class="btn bg-dark text-white mt-3" target="_blank"> zu Google Maps</a>
+            <!-- <a href="setLink" class="btn bg-dark text-white mt-3" target="_blank"> Anfahrt Auto </a> -->
+            <!-- <a href="setLink" class="btn bg-dark text-white mt-3" target="_blank"> Anfahrt Bus </a> -->
+          </div>
+        </div>
+        <div class="col-lg-2 d-none d-lg-block"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Stiftung -->
   <section id="stiftung">
     <span id="navtostiftung" class="navto"></span>
@@ -716,20 +762,6 @@
 
             </div>
           </div>
-          <!-- Google Maps 
-        <div class="col-lg-6" id="MapsCard" style="min-height: 40vh; margin-top: 4vh;">
-          <p> <br></p>
-          <div class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" id="flexSwitchCheckMaps" onclick="LoadMapsCard()">
-            <label class="form-check-label" for="flexSwitchCheckMaps">Ich bin damit einverstanden, dass mir Inhalte von
-              Google Maps angezeigt werden. Es können dabei personenbezogene Daten an den Anbieter des Inhalts und
-              Drittdienste übermittelt werden. Mehr dazu in der <a href="#navtodatenschutzerklaerung"
-                data-bs-toggle="modal" data-bs-target="#datenschutzerklaerungModal"
-                class="text-dark">Datenschutzerklärung</a></label>
-          </div>
-          <p> <br></p>
-        </div>
-        -->
         </div>
       </div>
   </section>
@@ -1035,7 +1067,7 @@
             <h3 class="text-dark">Almrauschparty 🥳🪩</h3>
             <h5 class="text-dark">mit Almklausi und DJ 2B vom Spinnradl</h5>
             <p> <br></p>
-            <h5 class="text-dark"> Die 2. Partynacht beim Burschengaufest 2024🎉🍻🥃</h5>
+            <h5 class="text-dark"> Die zweite Partynacht beim Burschengaufest 2024🎉🍻🥃</h5>
             <p> <br></p>
             <h6 class="text-dark"> 🔊 Malle- und Après Ski-Star ALMKLAUSI</h6>
             <h6 class="text-dark"> 🎧 DJ 2B vom Spinnradl Spitzingsee</h6>
